(FIX) reduces the z-index value of hero banner by 1 to fix the issue of hiding sticky navbar

--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ body {
     align-items: center;
     height: 600px;
     background: url("Images/Hero_BannerV2_compressed.jpg") no-repeat center center / cover;
-    z-index: 998;
+    z-index: 997;
 }
 
 .hero-content {
